# christmas-lights

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
lights/: Dockerfile  lightsStarter.py  setup.py
lights/lights/: README.md  constants.py  execute.py  lights.py  lights_base.py  playground.ipynb  record_animation.py  requirements.in  requirements.txt  run.sh  run_animation.py  server.py
lights/lights/animations/: __init__.py  ai_american_flag.py  ai_icicles.py  ai_red_green.py  ai_snake.py  ai_spongebob_shooting_star.py  ai_streamer.py  ai_twinkling_stars.py  base.py  benchmark.py  binary_count.py  bouncing_gradient.py  bouncy_balls.py  brightness_wave.py  candy_cane.py  collatz.py  color_sine.py  color_sort.py  down_the_line.py  down_the_plane.py  dummy.py  embers.py  fire.py  fire_fast.py  game_of_life.py  game_of_life_3d.py  goal_light.py  merge_sort.py  moving_rainbow.py  nhl_goals.py  nhlgoals.py  off.py  projection3d.py  rainbow_sine.py  red_green_swap.py  rotating_plane.py  single.py  single_color.py  snake.py  snowflakes.py  (+10 more)
lights/lights/controller/: 3d.py  __init__.py  base.py  gui.py  lights.py  lights_simulator.py  lights_simulator_base.py  lights_simulator_noop.py  lights_simulator_terminal.py  lights_simulator_tkinter.py  mpl.py  noop.py  (+3 more)
qr-code/: README.md  qr-code-gen.py  qr-code.ino  requirements.in  requirements.txt
webapp/: README.md
webapp/backend/: backend-cli.py  requirements.in  requirements.txt
webapp/frontend/: .env  .env.production  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+61 files in other folders)
